--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@
 bin-int
 bin
 OpenGL-Core/vendor
+dep/include
+dep/lib/swscale.lib
+dep/lib/swresample.lib
+dep/lib/postproc.lib
+dep/lib/avutil.lib
+dep/lib/avformat.lib
+dep/lib/avfilter.lib
+dep/lib/avdevice.lib
+dep/lib/avcodec.lib
+CitiesBad/avcodec-58.dll
+CitiesBad/avdevice-58.dll
+CitiesBad/avfilter-7.dll
+CitiesBad/avformat-58.dll
+CitiesBad/avutil-56.dll
+CitiesBad/postproc-55.dll
+CitiesBad/swresample-3.dll
+CitiesBad/swscale-5.dll
